# init-opengl-window

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
